--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,23 @@
+appdirs==1.4.3
 asgiref==3.2.3
 astroid==2.3.3
+certifi==2020.4.5.1
 colorama==0.4.3
+distlib==0.3.0
+dj-database-url==0.5.0
 Django==3.0.5
 django-crispy-forms==1.9.1
+django-heroku==0.3.1
 django-widget-tweaks==1.4.8
+filelock==3.0.12
+gunicorn==20.0.4
 html5lib==1.0.1
+importlib-metadata==1.5.0
 isort==4.3.21
 lazy-object-proxy==1.4.3
 mccabe==0.6.1
 Pillow==7.0.0
+pipenv==2020.6.2
 psycopg2==2.8.4
 pylint==2.4.4
 PyPDF2==1.26.0
@@ -17,6 +26,11 @@ reportlab==3.5.42
 six==1.14.0
 sqlparse==0.3.1
 typed-ast==1.4.1
+virtualenv==20.0.7
+virtualenv-clone==0.5.4
+virtualenvwrapper-win==1.2.6
 webencodings==0.5.1
+whitenoise==5.1.0
 wrapt==1.11.2
 xhtml2pdf==0.2.4
+zipp==3.0.0
